# read_google_sheets

./: .gitignore  README.md  daily_rate.ini  pyproject.toml
src/sheets_api/: config.py  data.py  exchange.py  kurs_exchange.py  service_account.json
